Move database calls server side

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.19",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "openai": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
